completed asignment